--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     color: var(--vd-gray-blue);
 }
 
+
 :root {
     --vd-saturate-blue: hsl(238, 29%, 16%);
     --soft-red: hsl(14, 88%, 65%);
@@ -22,19 +23,20 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 
-.card-container {
+/* .card-container {
     min-width: 350px;
     height: 75vh;
-    width: 50vw;
+    width: 75vw;
     background-color: white;
-   padding-bottom: 15px;
+    padding-bottom: 15px;
     margin-top: 65px;
     border-radius: 25px;
     background-image: url(images/bg-pattern-mobile.svg);
-    background-size: 250px, contain;
+    background-size: 20em, contain;
     background-repeat: no-repeat;  
     background-position: 50% 0%;
     display: flex;
@@ -46,8 +48,8 @@ body {
 }
 
 .img-header {
-    position: absolute;
     top: -150px;
+    position: absolute;
     transform: scale(0.65);
 }
 
@@ -83,3 +85,4 @@ h1 {
     font-weight: 700;
     color: var(--vd-saturate-blue);
 }
+ */
